--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "author": "yelingfeng <yelingfeng521@gmail.com>",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --port=8100",
-    "build": "rimraf static && cross-env NODE_ENV=production webpack  --progress --hide-modules --config webpack.prod.config.js"
+    "build": "rimraf static && cross-env NODE_ENV=production webpack  --progress --hide-modules --config webpack.prod.config.js",
+    "apiServer" : "node server.js"
   },
   "dependencies": {
     "echarts": "^3.2.2",
     "font-awesome": "^4.6.3",
     "foundation-datepicker": "^1.5.3",
+    "jquery": "^2.2.4",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
-    "jquery": "^2.2.4"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
@@ -26,6 +28,7 @@
     "bootstrap": "^3.3.7",
     "cross-env": "^1.0.6",
     "css-loader": "^0.23.1",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.8.4",
     "happypack": "^2.2.1",
