--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "foundation-datepicker": "^1.5.3",
     "jquery": "^2.2.4",
     "lodash": "^4.15.0",
-    "moment": "^2.14.1",
+    "moment": "^2.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
